shuffle in order with probability

--- a/ErsatzTV/Pages/Playouts.razor
+++ b/ErsatzTV/Pages/Playouts.razor
@@ -428,7 +428,7 @@
     {
         PlayoutBuildMode mode = playout.ScheduleKind switch
         {
-            PlayoutScheduleKind.Classic => PlayoutBuildMode.Refresh,
+            PlayoutScheduleKind.Classic => PlayoutBuildMode.Reset,
             _ => PlayoutBuildMode.Reset
         };
 
